# featuredetect

./: Cargo.toml  Dockerfile  README.md
docs/Week 1 - Perceiving the World/: ~$1-2_Sensors_and_Image_Formation.pptx
docs/Week 10 - RANSAC/: 10_2_ORB.pptx
docs/Week 2 - From World to Image/: 2-1_ 2D_to_2D_Coordinate_Transforms.pptx  2-3_3D_to_2D_Transforms.pptx  2-4_Transforms_Additional.pptx
docs/Week 4 - Color and Gradient/: 4-2-1_Edge_Detection.pptx
docs/Week 6 - Linear Optimization/: Alignment.pptx  Homography-1.pptx  find_corresponding.py  fuse_color.py
docs/Week 7 - Nonlinear Optimization/: AlignmentNonlinear.pptx  CameraCalibration.pptx  img3_rect.tif
docs/Week 9 - Feature Detection/: 9_2_SURF.pptx
notebooks/: camera-calcs.ipynb  camera_mats.txt  orb-test.py
notebooks/calib-results/: cam_mats_left.npy  cam_mats_right.npy  disp_to_depth_mat.npy  dist_coefs_left.npy  dist_coefs_right.npy  e_mat.npy  f_mat.npy  proj_mats_left.npy  proj_mats_right.npy  rect_trans_left.npy  rect_trans_right.npy  rectification_map_left.npy  rectification_map_right.npy  rot_mat.npy  trans_vec.npy  undistortion_map_left.npy  undistortion_map_right.npy  valid_boxes_left.npy  valid_boxes_right.npy
src/: akaze_detector.rs  cli.rs  image_splitter.rs  image_util.rs  img_util.rs  lib.rs  main.rs  ndarray2mat.rs  orb_detector.rs  orb_matcher.rs
src/ranging/: mod.rs  monocular_ranging.rs
src/sparsestereo/: akaze_stereo.rs  mod.rs  traits.rs  triangulate.rs
tests/: general_tests.rs
