[package]
name = "featuredetect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.88.1" }
clap = { version = "4.4", features = ["derive"] }
ndarray = "0.15"
camino = "1.1"
image = "0.24"
nalgebra = "0.32"
num = "0.4"

camera_models = { git = "https://github.com/sjbeskur/cameras.git", branch = "master" }
